src/plp/optparam/parser/GramaticaOptParam.java
/* Generated By:JavaCC: Do not edit this line. GramaticaOptParam.java */
package plp.optparam.parser;
import plp.lf1.Programa;
import plp.le1.expressoes.*;
import plp.le2.expressoes.*;
import plp.lf1.expressoes.*;
import plp.optparam.expressoes.*;
import plp.le2.excecoes.*;
import plp.le1.util.*;
import plp.optparam.util.*;
import java.io.File;
import java.io.FileInputStream;
import java.io.StringReader;
import java.util.ArrayList;
import java.util.List;

public class GramaticaOptParam implements GramaticaOptParamConstants {
  public static void main(String args []) throws ParseException
  {
    if (args.length == 0)
    {
      System.out.println("OptParam Parser Version 0.0.1:  Nenhuma expressao passada como argumento para analise");
      return;
    }
    GramaticaOptParam parser = new GramaticaOptParam(new StringReader(args [0]));
    try
    {
      System.out.println(args [0]);
      Programa programa = parser.Input();
      System.out.println("OptParam Parser Parser v.0.0.1:  Programa analisado com sucesso");
      try
      {
        if (!programa.checaTipo())
        {
          System.out.println("OptParam Parser v.0.0.1: Erro de tipo");
        }
        else
        {
          System.out.print("OptParam Parser v.0.0.1:  Resultado do programa = ");
          programa.executar();
        }
      }
      catch (VariavelJaDeclaradaException ee)
      {
        System.out.println("OptParam Parser v.0.0.1: " + ee);
        ee.printStackTrace();
      }
      catch (VariavelNaoDeclaradaException ee)
      {
        System.out.println("OptParam Parser v.0.0.1: " + ee);
        ee.printStackTrace();
      }
    }
    catch (ParseException e)
    {
      System.out.println("OptParam Parser v.0.0.1:  Erro encontrado durante a analise");
    }
  }

  static final public Programa Input() throws ParseException {
  Programa retorno;
    retorno = PPrograma();
    jj_consume_token(0);
    {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

  static final public Valor PValorInteiro() throws ParseException {
  Token token;
    token = jj_consume_token(INTEGER_LITERAL);
    {if (true) return new ValorInteiro(Integer.parseInt(token.toString()));}
    throw new Error("Missing return statement in function");
  }

  static final public Valor PValorBooleano() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FALSE:
      jj_consume_token(FALSE);
    {if (true) return new ValorBooleano(false);}
      break;
    case TRUE:
      jj_consume_token(TRUE);
    {if (true) return new ValorBooleano(true);}
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Valor PValorString() throws ParseException {
  Token token;
    token = jj_consume_token(STRING_LITERAL);
    String tokenStr = token.toString();
    tokenStr = tokenStr.substring(1, tokenStr.length() - 1);
    {if (true) return new ValorString(tokenStr);}
    throw new Error("Missing return statement in function");
  }

  static final public Valor PValor() throws ParseException {
  Valor retorno;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      retorno = PValorInteiro();
      break;
    case TRUE:
    case FALSE:
      retorno = PValorBooleano();
      break;
    case STRING_LITERAL:
      retorno = PValorString();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

  static final public Id PId() throws ParseException {
  Token token;
    token = jj_consume_token(IDENTIFIER);
    String tokenStr = token.toString();
    {if (true) return new Id(tokenStr);}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PExpMenos() throws ParseException {
  Expressao retorno;
    jj_consume_token(MINUS);
    retorno = PExpPrimaria();
    {if (true) return new ExpMenos(retorno);}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PExpNot() throws ParseException {
  Expressao retorno;
    jj_consume_token(NOT);
    retorno = PExpPrimaria();
    {if (true) return new ExpNot(retorno);}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PExpLength() throws ParseException {
  Expressao retorno;
    jj_consume_token(LENGTH);
    retorno = PExpPrimaria();
    if (retorno instanceof ValorString)
    {
      ValorString val = (ValorString) retorno;
    }
    {if (true) return new ExpLength(retorno);}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PExpPrimaria() throws ParseException {
  Expressao retorno;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
    case FALSE:
    case INTEGER_LITERAL:
    case STRING_LITERAL:
      retorno = PValor();
      break;
    case IDENTIFIER:
      retorno = PId();
      break;
    case LPAREN:
      jj_consume_token(LPAREN);
      retorno = PExpressao();
      jj_consume_token(RPAREN);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

///////////////////////////////////////////////////////////////////////////////
//////////////////////    REGRA DE PRODUCAO ATUALIZADA   //////////////////////
//// OBS: essa regra so era chamada no contexto de uma declaracao de Funcao ///
///////////////////////////////////////////////////////////////////////////////
  static final public List PListaId() throws ParseException {
  Id id;
  ParametroFuncao param;
  Valor valorDefault;
  List < ParametroFuncao > retorno = null;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_1;
      }
      ///////////////////////////////////////////////////////////////////////////////
          // ALTERADA A ESTRUTURA DA DECLARACAO DA FUNCAO PARA INCLUIR VALORES DEFAULT //
          ///////////////////////////////////////////////////////////////////////////////
          id = PId();
      jj_consume_token(LPAREN);
      valorDefault = PValor();
      jj_consume_token(RPAREN);
      if (retorno == null)
      {
        retorno = new ArrayList < ParametroFuncao > ();
        retorno.add(new ParametroFuncao(id, valorDefault));
      }
      else
      {
        retorno.add(new ParametroFuncao(id, valorDefault));
      }
    }
    {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

  static final public DeclaracaoFuncional PDeclVar() throws ParseException {
  Id id;
  Expressao expressao;
  DeclaracaoFuncional retorno;
    jj_consume_token(VAR);
    id = PId();
    jj_consume_token(ASSIGN);
    expressao = PExpressao();
    {if (true) return new DecVariavel(id, expressao);}
    throw new Error("Missing return statement in function");
  }

///////////////////////////////////////////////////////////////////////////////
//////////////////////    REGRA DE PRODUCAO ATUALIZADA   //////////////////////
///////////////////////////////////////////////////////////////////////////////
  static final public DeclaracaoFuncional PDeclFuncao() throws ParseException {
  Id id;
  Expressao expressao;
  DeclaracaoFuncional retorno;
  /////////////////////////////////////////////////
  ///   ALTERADO O TIPO DOS ELEMENTOS DA LISTA  ///
  /////////////////////////////////////////////////
  List < ParametroFuncao > lista;
    jj_consume_token(FUNC);
    id = PId();
    lista = PListaId();
    jj_consume_token(ASSIGN);
    expressao = PExpressao();
    {if (true) return new DecFuncao(id, lista, expressao);}
    throw new Error("Missing return statement in function");
  }

  static final public DecComposta PDecComposta() throws ParseException {
  DeclaracaoFuncional d1;
  DeclaracaoFuncional d2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VAR:
      d1 = PDeclVar();
      break;
    case FUNC:
      d1 = PDeclFuncao();
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(COMMA);
    d2 = PDeclFuncional();
    {if (true) return new DecComposta(d1, d2);}
    throw new Error("Missing return statement in function");
  }

  static final public DeclaracaoFuncional PDeclFuncional() throws ParseException {
  DeclaracaoFuncional decl;
    if (jj_2_1(2147483647)) {
      decl = PDecComposta();
    } else if (jj_2_2(2147483647)) {
      decl = PDecComposta();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VAR:
        decl = PDeclVar();
        break;
      case FUNC:
        decl = PDeclFuncao();
        break;
      case LPAREN:
        jj_consume_token(LPAREN);
        decl = PDeclFuncional();
        jj_consume_token(RPAREN);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return decl;}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PExpDeclaracao() throws ParseException {
  DeclaracaoFuncional declaracoes;
  Expressao expressao;
    jj_consume_token(LET);
    declaracoes = PDeclFuncional();
    jj_consume_token(IN);
    expressao = PExpressao();
    {if (true) return new ExpDeclaracao(declaracoes, expressao);}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PExpCondicional() throws ParseException {
  Expressao expCond, expThen, expElse;
    jj_consume_token(IF);
    expCond = PExpressao();
    jj_consume_token(THEN);
    expThen = PExpressao();
    jj_consume_token(ELSE);
    expElse = PExpressao();
    {if (true) return new IfThenElse(expCond, expThen, expElse);}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PAplicacao() throws ParseException {
  List expressoes = null;
  Expressao expressao;
  Id id;
    id = PId();
    jj_consume_token(LPAREN);
    expressao = PExpressao();
      expressoes = new ArrayList();
      expressoes.add(expressao);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMMA);
      expressao = PExpressao();
        expressoes.add(expressao);
    }
    jj_consume_token(RPAREN);
    {if (true) return new Aplicacao(id, expressoes);}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PExpUnaria() throws ParseException {
  Expressao retorno;
    if (jj_2_3(2147483647)) {
      retorno = PExpMenos();
    } else if (jj_2_4(2147483647)) {
      retorno = PExpNot();
    } else if (jj_2_5(2147483647)) {
      retorno = PExpLength();
    } else if (jj_2_6(2147483647)) {
      retorno = PExpDeclaracao();
    } else if (jj_2_7(2147483647)) {
      retorno = PExpCondicional();
    } else if (jj_2_8(2147483647)) {
      retorno = PAplicacao();
    } else if (jj_2_9(2147483647)) {
      retorno = PExpPrimaria();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PExpBinaria() throws ParseException {
  Expressao retorno, param2;
    retorno = PExpBinaria2();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQ:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_3;
      }
      jj_consume_token(EQ);
      param2 = PExpBinaria2();
        retorno = new ExpEquals(retorno, param2);
    }
    {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PExpBinaria2() throws ParseException {
  Expressao retorno, param2;
    retorno = PExpBinaria3();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
      case CONCAT:
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        jj_consume_token(PLUS);
        param2 = PExpBinaria3();
        retorno = new ExpSoma(retorno, param2);
        break;
      case MINUS:
        jj_consume_token(MINUS);
        param2 = PExpBinaria3();
        retorno = new ExpSub(retorno, param2);
        break;
      case OR:
        jj_consume_token(OR);
        param2 = PExpBinaria3();
        retorno = new ExpOr(retorno, param2);
        break;
      case CONCAT:
        jj_consume_token(CONCAT);
        param2 = PExpBinaria3();
        retorno = new ExpConcat(retorno, param2);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PExpBinaria3() throws ParseException {
  Expressao retorno, param2;
    retorno = PExpUnaria();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_5;
      }
      jj_consume_token(AND);
      param2 = PExpUnaria();
        retorno = new ExpAnd(retorno, param2);
    }
    {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

  static final public Expressao PExpressao() throws ParseException {
  Expressao retorno;
    retorno = PExpBinaria();
    {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

  static final public Programa PPrograma() throws ParseException {
  Expressao retorno;
    retorno = PExpressao();
    {if (true) return new Programa(retorno);}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_3R_35() {
    if (jj_3R_42()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_43()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_57() {
    if (jj_3R_13()) return true;
    if (jj_scan_token(LPAREN)) return true;
    if (jj_3R_15()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_58()) { jj_scanpos = xsp; break; }
    }
    if (jj_scan_token(RPAREN)) return true;
    return false;
  }

  static private boolean jj_3R_6() {
    if (jj_scan_token(VAR)) return true;
    if (jj_3R_13()) return true;
    if (jj_scan_token(ASSIGN)) return true;
    if (jj_3R_15()) return true;
    return false;
  }

  static private boolean jj_3R_13() {
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  static private boolean jj_3R_47() {
    if (jj_scan_token(CONCAT)) return true;
    if (jj_3R_35()) return true;
    return false;
  }

  static private boolean jj_3R_46() {
    if (jj_scan_token(OR)) return true;
    if (jj_3R_35()) return true;
    return false;
  }

  static private boolean jj_3R_12() {
    if (jj_scan_token(IF)) return true;
    if (jj_3R_15()) return true;
    if (jj_scan_token(THEN)) return true;
    if (jj_3R_15()) return true;
    if (jj_scan_token(ELSE)) return true;
    if (jj_3R_15()) return true;
    return false;
  }

  static private boolean jj_3R_45() {
    if (jj_scan_token(MINUS)) return true;
    if (jj_3R_35()) return true;
    return false;
  }

  static private boolean jj_3R_34() {
    if (jj_3R_41()) return true;
    return false;
  }
